crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__minute__single__specifier_49.snap
---
source: crates/tools/cron/src/tests/unit/minute.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "",
                    '-',
                ),
                Nom(
                    "49",
                    Alt,
                ),
            ],
        },
    ),
)
